<LinearLayout
    android:id="@+id/fragmentRegister"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"

    android:background="#0099CC"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.howdoicomputer.android.shoppingwithfriends.view.act.act.WelcomeAct">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="#3b5998"
        android:drawableRight="@drawable/ic_fb_swf"
        android:text="@string/Sign_up_with"
        android:textColor="#fefefe"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="#d8337799"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <AutoCompleteTextView
            android:id="@+id/frag_reg_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#b1fefefe"/>

        <AutoCompleteTextView
            android:id="@+id/frag_reg_usrName_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#b1fefefe"/>

        <AutoCompleteTextView
            android:id="@+id/frag_reg_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#b1fefefe"/>

        <EditText
            android:id="@+id/frag_reg_pass1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#b1fefefe"/>

        <EditText
            android:id="@+id/frag_reg_pass2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:imeActionLabel="Sign up"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#b1fefefe"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up"
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:id="@+id/cancelRegister_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cancel"
            android:maxLines="1"
            android:onClick="cancel"
            android:singleLine="true"/>


    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="100dp"
        android:src="@drawable/swf1"/>

</LinearLayout>
