<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:android.support.v7.cardview="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/listed_item"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android.support.v7.cardview:cardCornerRadius="32dp"
        android.support.v7.cardview:cardElevation="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/post_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/feed_default"/>

                <ImageView
                    android:id="@+id/poster_image"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="left|top"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/defmen"/>

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/poster_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:text="@string/user"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/is_interested"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:text="@string/is_interested_in"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/reported"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:text="@string/_reported"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:text="@string/itemName"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/interest_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:text="@string/priced_lower_than_"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="italic"/>

                    <TextView
                        android:id="@+id/reported_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:text="@string/price_"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="italic"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:text="@string/dollarSign"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/posted_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:text="@string/tripleNine"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/feed_loc"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:textAlignment="textStart"
                android:touchscreenBlocksFocus="true"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:gravity="top|left"
                    android:src="@drawable/ic_map_marker"/>

                <TextView
                    android:id="@+id/feed_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/def_loc"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/abc_search_url_text"/>

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/feed_layout_clickspace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"/>

</FrameLayout>